--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Environment Variables ###
+.env
+.env.local
+.env.*.local
+
 ### STS ###
 .apt_generated
 .classpath
@@ -31,3 +36,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Logs ###
+*.log
