--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 spring.application.name=auth-project
+
+# Database Configuration
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/auth_project}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=true
+
+# Connection pool settings (optional but recommended)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:defaultSecretKey}
+jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION:900000}
+jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION:604800000}
+
+# JWT Cookie Configuration
+jwt.refresh-token.cookie-name=${JWT_REFRESH_TOKEN_COOKIE_NAME:refreshToken}
+jwt.refresh-token.secure=${JWT_REFRESH_TOKEN_SECURE:true}
+jwt.refresh-token.http-only=${JWT_REFRESH_TOKEN_HTTP_ONLY:true}
+
+# Production settings
+server.port=${PORT:8080}
+logging.level.com.example.auth_project=${LOG_LEVEL:INFO}
